<resources>
    <string name="app_name">Za</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Outils</string>
    <string name="menu_share">Partager</string>
    <string name="menu_send">Send</string>
    <string name="menu_fav">Favoris</string>
    <string name="menu_see">Déjà visité</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="swipe_left_for_register">S\'inscrire</string>
    <string name="login">Connexion</string>
    <string name="password">Mot de passe</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Se connecter</string>
    <string name="register">Inscription</string>
    <string name="re_type_password">Confirmez le mot de passe</string>
    <string name="your_name">Nom Complet</string>

</resources>
