<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorPrimary"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom|center" android:id="@+id/profil">

    <ImageView
            android:layout_width="225dp"
            android:layout_height="61dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/imageView"
    />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:gravity="bottom|center"
            android:id="@+id/nomProfil" android:textColor="#F7F3F3"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/emailProfil"
            android:gravity="bottom|center"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="253dp"
            android:layout_height="49dp">
        <TextView
                android:text="Cliquez ici pour modifier vos informations personnelles"
                android:layout_width="206dp"
                android:layout_height="match_parent" android:id="@+id/textView" android:gravity="center"
                android:layout_weight="1" android:textStyle="italic" android:textColor="#D3FF0E"
                android:textSize="12sp"/>
    </LinearLayout>

</LinearLayout>
