<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ConnectActivity"
                                                   android:layout_gravity="center" android:id="@+id/lay"
                                                   android:scrollbarAlwaysDrawHorizontalTrack="true"
                                                   android:isScrollContainer="true"
                                                   android:nestedScrollingEnabled="false">

    <TextView
            android:id="@+id/tv_logo2"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="50sp"
            android:fontFamily="@font/damion"
            android:textColor="#FC7B38" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_subtitle" app:layout_constraintVertical_bias="1.0"
            app:layout_constraintHorizontal_bias="0.568"/>
    <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="353dp"
            android:layout_height="49dp"
            android:text="@string/tag"
            android:textSize="14sp"
            android:fontFamily="@font/aclonica"
            android:layout_above="@id/et_email" android:textAlignment="center"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/et_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:gravity="center_horizontal|center_vertical" android:textStyle="italic"
            app:layout_constraintHorizontal_bias="0.531" android:layout_marginBottom="24dp"/>

    <EditText
            android:id="@+id/et_email"
            android:layout_width="306dp"
            android:layout_height="65dp"
            android:hint="@string/e_mail"
            android:padding="15dp"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/roboto"
            android:layout_above="@id/et_password"
            android:background="@drawable/et_custom"
            android:textSize="15sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.541"
            android:layout_marginTop="268dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.023"/>

    <EditText
            android:id="@+id/et_password"
            android:layout_width="304dp"
            android:layout_height="59dp"
            android:hint="@string/password"
            android:padding="15dp"
            android:fontFamily="@font/roboto"
            android:inputType="textPassword"
            android:layout_centerInParent="true"
            android:background="@drawable/et_custom"
            android:textSize="15sp" android:layout_marginBottom="72dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/et_email" app:layout_constraintEnd_toEndOf="@+id/et_email"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_email"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.099"/>

    <Button
            android:id="@+id/btn_login"
            android:layout_width="308dp"
            android:layout_height="61dp"
            android:layout_below="@id/et_password"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/white"
            android:text="@string/login" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.551"
            android:backgroundTint="#FC7B38" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email" app:layout_constraintVertical_bias="0.442"
            android:textStyle="bold"/>

    <ImageView
            android:layout_width="44dp"
            android:layout_height="36dp"
            android:src="@drawable/ic_arrow_right"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:id="@+id/imageView3" app:layout_constraintHorizontal_bias="0.507"
            android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.511"/>

    <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp"
            android:fontFamily="@font/roboto"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:layout_constraintEnd_toEndOf="@+id/imageView3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="@+id/imageView3" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.471"
            app:layout_constraintVertical_bias="0.049"/>
    <Switch
            android:text="Restez connecté"
            android:layout_width="272dp"
            android:layout_height="36dp"
            android:id="@+id/switch1" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:fontFamily="@font/roboto"
            app:layout_constraintTop_toBottomOf="@+id/et_password"
            android:layout_marginTop="28dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_login" app:layout_constraintHorizontal_bias="0.54"
            app:layout_constraintVertical_bias="0.107"/>

</androidx.constraintlayout.widget.ConstraintLayout>
